updated namespace and markdown

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,3 +9,6 @@ export(gg_reshist)
 export(gg_resleverage)
 export(gg_scalelocation)
 export(plot_all)
+import(ggplot2)
+import(grid.arrange)
+import(gridExtra)
