--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,4 +10,4 @@ export(gg_resleverage)
 export(gg_scalelocation)
 export(plot_all)
 import(ggplot2)
-import(gridExtra)
+importFrom(gridExtra,grid.arrange)
