--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,9 @@
 Package: lindia
 Title: Linear Regression Diagonostic Plots in GGPlot
 Version: 0.0.0.9000
-Authors@R: person("Yeuk Yu", "Lee", email = "lyeukyu@gmail.com", role = c("aut", "cre"))
+Authors@R: c(person("Yeuk Yu", "Lee", email = "lyeukyu@gmail.com", role = c("aut", "cre")),
+	person("Samuel", "Ventura", email = "sventura@stat.cmu.edu",
+		role = c("aut")))
 Description: Allows easy generation of linear regression diagnostic plots in
     GGPlot. Graph types include residual plots, QQPlot, Boxcox graph, scale-location plot, and residual leverage plot. This package is meant for easy scheming of linear regression diagnostics. See the ggplot2 websites for more information regarding the functionality of how ggplot works.
 Depends:
@@ -11,7 +13,6 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 5.0.1
 Imports:
-	MASS,
 	ggplot2,
 	gridExtra
 Suggests: testthat
