edited axis label and scale factor for individual plots

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,3 +10,7 @@ export(gg_reshist)
 export(gg_resleverage)
 export(gg_scalelocation)
 export(plot_all)
+import(ggplot2)
+importFrom(gridExtra, grid.arrange)
+importFrom(MASS, boxcox)
+
