updated NAMESPACE dependencies

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,3 +13,11 @@ export(plot_all)
 import(ggplot2)
 importFrom(MASS,boxcox)
 importFrom(gridExtra,grid.arrange)
+importFrom(stats,fitted)
+importFrom(stats,formula)
+importFrom(stats,hatvalues)
+importFrom(stats,qchisq)
+importFrom(stats,qnorm)
+importFrom(stats,quantile)
+importFrom(stats,residuals)
+importFrom(stats,rstandard)
