added README that was removed because of submission to CRAN

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,21 +1,21 @@
 Package: lindia
 Type: Package
-Title: Linear Regression Diagonostic Plots in GGPlot
-Version: 0.0.0.9000
+Title: Automated Linear Regression Diagnostic
+Version: 0.9
 Authors@R: c(person("Yeuk Yu", "Lee", 
     email = "lyeukyu@gmail.com", 
     role = c("aut", "cre")),
     person("Samuel", "Ventura", 
     email = "sventura@stat.cmu.edu", 
     role = c("aut")))
-Description: Lindia provides a set of streamlined functions that allow
-    easy generation of linear regression diagnostic plots in ggplot
-    in just few commands. Graph types include residual plots, QQPlot, 
-    boxcox graph, scale-location plot, cook's distance plot, and 
-    residual-leverage plot. This package is meant for easy scheming of linear 
-    regression diagnostics, while preserving merits of layered graphics in 
-    ggplot.See the ggplot2 website for more information regarding the 
-    functionality of ggplot.
+Description: Provides a set of streamlined functions that allow
+    easy generation of linear regression diagnostic plots necessarily 
+    for checking linear model assumptions.
+    This package is meant for easy scheming of linear 
+    regression diagnostics, while preserving merits of 
+    "The Grammar of Graphics" as implemented in 'ggplot2'.
+    See the 'ggplot2' website for more information regarding the
+    specific capability of graphics.
 Depends:
     R (>= 3.2.2)
 License: MIT + file LICENSE
